--- a/app/src/main/res/layout/resultlayout.xml
+++ b/app/src/main/res/layout/resultlayout.xml
@@ -26,8 +26,8 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="234dp"
-        android:layout_height="100dp"
+        android:layout_width="253dp"
+        android:layout_height="149dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -36,12 +36,12 @@
         android:layout_marginBottom="8dp"
         android:lines="5"
         android:text=""
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.099" />
+        app:layout_constraintVertical_bias="0.127" />
 
     <Button
         android:id="@+id/button2"
